--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -11,4 +11,16 @@
     <string name="earth">Region</string>
     <string name="settings">Configuration</string>
     <string name="visits_done">visits completed</string>
+    <string name="routes_title">My routes</string>
+    <string name="routes_subtitle">3/7 visits made</string>
+    <string name="register_visit">Register visit</string>
+    <string name="suggest_product">Suggest product</string>
+    <string name="create_order">Create order</string>
+    <string name="follow_order">Follow order</string>
+    <string name="clients">My clients</string>
+    <string name="back">Back</string>
+    <string name="regional_settings">Regional settings</string>
+    <string name="placeholder_default">Select an option</string>
+    <string name="required_field">Required field</string>
+    <string name="save">Save</string>
 </resources>
