--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -23,4 +23,13 @@
     <string name="placeholder_default">Select an option</string>
     <string name="required_field">Required field</string>
     <string name="save">Save</string>
+    <string name="pending_approval">Pending approval</string>
+    <string name="processing">Processing</string>
+    <string name="in_transit">In transit</string>
+    <string name="delivered">Delivered</string>
+    <string name="cancelled">Cancelled</string>
+    <string name="delayed">Delayed</string>
+    <string name="last_update">Last update</string>
+    <string name="order">Order</string>
+    <string name="order_history">Order history</string>
 </resources>
