--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,12 @@
     <string name="placeholder_default">Selecciona una opción</string>
     <string name="required_field">Campo obligatorio</string>
     <string name="save">Guardar</string>
+    <string name="language_label">Idioma</string>
+    <string name="language_spanish">Español (Colombia)</string>
+    <string name="language_english">Inglés (Estados Unidos)</string>
+    <string name="country_label">País</string>
+    <string name="country_colombia">Colombia</string>
+    <string name="country_peru">Perú</string>
+    <string name="country_ecuador">Ecuador</string>
+    <string name="country_mexico">México</string>
 </resources>
