--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -31,4 +31,11 @@
     <string name="country_peru">Peru</string>
     <string name="country_ecuador">Ecuador</string>
     <string name="country_mexico">Mexico</string>
+    <string name="label_client">Client</string>
+    <string name="label_client_placeholder">Assigned client</string>
+    <string name="total">Total</string>
+    <string name="product_label">Product</string>
+    <string name="product_placeholder">Select the product</string>
+    <string name="observations_label">Observations</string>
+    <string name="observations_placeholder">Write your order comment here...</string>
 </resources>
