--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="last_update">Última actualización</string>
     <string name="order">Pedido</string>
     <string name="order_history">Historial de pedidos</string>
+    <string name="no_order_history">¡Ups! Aún no tienes pedidos registrados.</string>
+    <string name="error_order_history">¡Ups! No pudimos obtener los pedidos. Intenta nuevamente.</string>
 </resources>
