Add services integraiton

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -53,4 +53,14 @@
     <string name="cancel">Cancel</string>
     <string name="client_selected">Client selected</string>
     <string name="product_selected">Selected products</string>
+    <string name="open_close">Open or close list</string>
+    <string name="no_results">No results</string>
+    <string name="picture">Photo</string>
+    <string name="decrease">Decrease</string>
+    <string name="increase">Increase</string>
+    <string name="no_results_to">No results for %1$s</string>
+    <string name="section_description">Section: %1$s</string>
+    <string name="client_not_selected">Client no selected</string>
+    <string name="order_success">Order created successfully.</string>
+    <string name="order_error">¡Ups! Unable to create the order. Please try again.</string>
 </resources>
