--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -63,4 +63,5 @@
     <string name="client_not_selected">Client no selected</string>
     <string name="order_success">Order created successfully.</string>
     <string name="order_error">¡Ups! Unable to create the order. Please try again.</string>
+    <string name="date_of_visit">Date of visit</string>
 </resources>
