--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,5 @@
     <string name="client_not_selected">Cliente no seleccionado</string>
     <string name="order_success">Pedido creado exitosamente.</string>
     <string name="order_error">¡Ups! No fue posible crear el pedido. Intenta nuevamente.</string>
+    <string name="date_of_visit">Fecha de visita</string>
 </resources>
