--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,8 @@
     <string name="order_success">Pedido creado exitosamente.</string>
     <string name="order_error">¡Ups! No fue posible crear el pedido. Intenta nuevamente.</string>
     <string name="date_of_visit">Fecha de visita</string>
+    <string name="select_date">Seleccionar fecha</string>
+    <string name="date">Fecha</string>
     <string name="visit_success">Visita registrada exitosamente</string>
     <string name="visit_error">!Ups! Ya aparece un registro de tu visita para este cliente en la fecha seleccionada.</string>
 </resources>
