--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -78,4 +78,5 @@
     <string name="photo_option">Take photo</string>
     <string name="video_option">Record video</string>
     <string name="gallery_option">Select from gallery</string>
+    <string name="no_daily_routes">You do not have any routes assigned for today.</string>
 </resources>
