--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -84,4 +84,20 @@
     <string name="success_evidence">Evidence successfully added</string>
     <string name="error_evidence">Oops! We were unable to add the evidence. Please try again.</string>
     <string name="finish_evidences_button">Finish evidences</string>
+    <string name="error_upload_evidence">Oops! Error uploading evidence. Please try again.</string>
+    <string name="recomendations">Recommendations</string>
+    <string name="no_recomendations">No recommendations available.</string>
+    <string name="product_name_unavailable">Product name not available</string>
+    <string name="score_label">Score: %1$.2f</string>
+    <string name="no_available">Not available</string>
+    <string name="reasoning_label">Reasoning</string>
+    <string name="recommend">Recommend</string>
+    <string name="version_label">Version</string>
+    <string name="date_label">Update Date</string>
+    <string name="upload_success_message">Evidence uploaded successfully.</string>
+    <string name="no_evidences_to_upload">No evidence pending upload.</string>
+    <string name="uploading_evidences_message">Uploading evidence, please wait...</string>
+    <string name="processing_visit_message">Processing visit and generating recommendations...</string>
+    <string name="uploading_progress_format">Uploading... %1$d%%</string>
+    <string name="upload_error_message">Upload error. Try again.</string>
 </resources>
