--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,4 +102,18 @@
     <string name="processing_visit_message">Procesando visita y generando recomendaciones...</string>
     <string name="uploading_progress_format">Subiendo... %1$d%%</string>
     <string name="upload_error_message">Error al subir. Intenta nuevamente.</string>
+    <string name="order_detail">Detalle del Pedido</string>
+    <string name="creation_date">Fecha de creación</string>
+    <string name="estimated_delivery">Entrega estimada</string>
+    <string name="client_id">Cliente</string>
+    <string name="seller_id">Vendedor</string>
+    <string name="total_order">Valor total del pedido</string>
+    <string name="products">Productos</string>
+    <string name="quantity">Cantidad</string>
+    <string name="unit_price">Precio unitario</string>
+    <string name="subtotal">Subtotal</string>
+    <string name="error_loading_order">Error al cargar el pedido</string>
+    <string name="retry">Reintentar</string>
+    <string name="status">Estado</string>
+    <string name="delivery_address">Dirección de entrega</string>
 </resources>
