--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,4 +120,11 @@
     <string name="retry">Reintentar</string>
     <string name="status">Estado</string>
     <string name="delivery_address">Dirección de entrega</string>
+    <string name="welcome">Bienvenido</string>
+    <string name="email">Correo</string>
+    <string name="password">Contraseña</string>
+    <string name="login">Ingresar</string>
+    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
+    <string name="show_password">Ocultar contraseña</string>
+    <string name="hide_password">Mostrar contraseña</string>
 </resources>
