--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -125,4 +125,7 @@
     <string name="forgot_password">Do you forgot your password?</string>
     <string name="show_password">Show password</string>
     <string name="hide_password">Hide password</string>
+    <string name="logout">Logout</string>
+    <string name="confirm_logout">Are you sure you want to log out?</string>
+    <string name="confirm">Confirm</string>
 </resources>
