--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -125,4 +125,8 @@
     <string name="forgot_password">Do you forgot your password?</string>
     <string name="show_password">Show password</string>
     <string name="hide_password">Hide password</string>
+    <string name="your_recommendations">Your recommendations</string>
+    <string name="previous">Previous</string>
+    <string name="next">Next</string>
+    <string name="page_label">Page %1$d of %2$d</string>
 </resources>
