Add register flow

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -144,4 +144,22 @@
     <string name="no_data_orders">This customer has not yet registered any orders</string>
     <string name="statement">Account statement</string>
     <string name="available">Balance available</string>
+    <string name="no_account">Don\'t have an account?</string>
+    <string name="register">Register</string>
+    <string name="register_label">Register</string>
+    <string name="name">Name</string>
+    <string name="lastname">Last name</string>
+    <string name="identification">Identification number</string>
+    <string name="label_phone_register">Phone</string>
+    <string name="data_company">Company Details</string>
+    <string name="nit">Tax Identification Number</string>
+    <string name="company_name">Company Name</string>
+    <string name="search_address">Search address</string>
+    <string name="select_address">Select your address</string>
+    <string name="phone_invalid">Invalid Phone Number</string>
+    <string name="email_invalid">Invalid Email</string>
+    <string name="psswd_invalid">Invalid Password</string>
+    <string name="create_account">Create Account</string>
+    <string name="user_success">User created successfully.</string>
+    <string name="user_error">Oops! User could not be created. Please try again.</string>
 </resources>
