--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -162,4 +162,6 @@
     <string name="create_account">Create Account</string>
     <string name="user_success">User created successfully.</string>
     <string name="user_error">Oops! User could not be created. Please try again.</string>
+    <string name="search_placeholder_user">Search user</string>
+    <string name="no_access">Oops! Access denied</string>
 </resources>
