--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -170,4 +170,5 @@
     <string name="user_error">¡Ups! No fue posible crear el usuario. Intenta nuevamente.</string>
     <string name="search_placeholder_user">Buscar usuario</string>
     <string name="no_access">¡Ups! Acceso denegado</string>
+    <string name="access_restricted_message">Esta sección no está disponible para tu perfil</string>
 </resources>
